--- a/hugo.yaml
+++ b/hugo.yaml
@@ -47,7 +47,7 @@ params:
       width: 35
       height: 35
       link: /
-    width: wide
+    favicon: true
 
   footer:
     displayCopyright: false
